# invoice-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: sample_invoices.jsonl
src/invoice_guard/: __init__.py  __main__.py  advisor.py  engine.py  gates.py  model.py
tests/: test_safety.py
